# align

./: .gitignore  Cargo.toml  README.md  justfile
src/: cli.rs  lib.rs  main.rs
test_files/: rnr.aln.tsv.expected  rnr.fasta  tiny.aln_w_ops.tsv.expected  tiny.fasta
