[package]
name = "align"
version = "1.0.0"
edition = "2021"
exclude = ["justfile", "test_files", "_*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.1.0"
clap = { version = "4.1.4", features = ["derive"] }
crossbeam = "0.8.2"
itertools = "0.10.5"
